[gd_scene load_steps=10 format=3 uid="uid://ttu8n8efwc2i"]

[ext_resource type="PackedScene" uid="uid://ccxyu1ekqf3oh" path="res://shaders/UI_Shaders.tscn" id="1_6kfj0"]
[ext_resource type="PackedScene" uid="uid://xgiy4raoxxhf" path="res://UI/Transitions/transition_controller.tscn" id="1_oixmu"]
[ext_resource type="Script" path="res://UI/start_menu/game_start_ui.gd" id="3_hhhcp"]
[ext_resource type="Theme" uid="uid://bajqmo6fttg8t" path="res://UI/Theme/player_menu.tres" id="4_okm2a"]
[ext_resource type="Script" path="res://UI/map_selection/hover_selection.gd" id="5_5l2md"]
[ext_resource type="Script" path="res://UI/start_menu/start_menu_controller.gd" id="6_acgue"]
[ext_resource type="AnimationLibrary" uid="uid://dmjaqxcvaawai" path="res://UI/start_menu/start_menu_animations.res" id="7_hl7we"]

[sub_resource type="Animation" id="Animation_pjjeu"]
length = 0.001

[sub_resource type="AnimationLibrary" id="AnimationLibrary_d31ty"]
_data = {
"RESET": SubResource("Animation_pjjeu")
}

[node name="UI" type="Node2D"]

[node name="Shaders" parent="." instance=ExtResource("1_6kfj0")]

[node name="Menu_Options" type="BackBufferCopy" parent="."]
copy_mode = 2

[node name="start_menu" type="Control" parent="Menu_Options"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -100.0
offset_right = 1820.0
offset_bottom = 980.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(955, 517)
size_flags_vertical = 4
script = ExtResource("3_hhhcp")
metadata/_edit_lock_ = true

[node name="Play" type="Button" parent="Menu_Options/start_menu"]
layout_mode = 2
offset_left = 747.0
offset_top = 371.0
offset_right = 1167.0
offset_bottom = 451.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(206, 46)
theme = ExtResource("4_okm2a")
text = "P l a y"
script = ExtResource("5_5l2md")
metadata/_edit_lock_ = true

[node name="Options" type="Button" parent="Menu_Options/start_menu"]
layout_mode = 2
offset_left = 747.0
offset_top = 611.0
offset_right = 1182.0
offset_bottom = 701.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("4_okm2a")
text = "O p t i o n s"
metadata/_edit_lock_ = true

[node name="Quit" type="Button" parent="Menu_Options/start_menu"]
layout_mode = 2
offset_left = 747.0
offset_top = 851.0
offset_right = 1167.0
offset_bottom = 931.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("4_okm2a")
text = "Q u i t"
metadata/_edit_lock_ = true

[node name="Transition" parent="." instance=ExtResource("1_oixmu")]

[node name="animation_controller" type="Node2D" parent="."]
script = ExtResource("6_acgue")

[node name="Button_movement" type="AnimationPlayer" parent="animation_controller"]
root_node = NodePath("../..")
reset_on_save = false
libraries = {
"": ExtResource("7_hl7we")
}
blend_times = [&"Options_pulse", &"Pop_in", 0.001]

[node name="Button_pop" type="AnimationPlayer" parent="animation_controller"]
reset_on_save = false
libraries = {
"": SubResource("AnimationLibrary_d31ty"),
"start_menu_animations": ExtResource("7_hl7we")
}
